--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <form class="card__form">
         <div class="card__fieldset">
           <label class="card__label" for="weight">Peso (kg)</label>
-          <input class="card__input" type="text" id="weight" placeholder="75">
+          <input data-form="weight" class="card__input" type="text" id="weight" placeholder="75">
         </div>
 
         <div class="card__fieldset">
           <label class="card__label" for="height">Altura (cm)</label>
-          <input class="card__input" type="text" id="height" placeholder="165">
+          <input data-form="height" class="card__input" type="text" id="height" placeholder="165">
         </div>
 
-        <button class="card__button" type="submit">
+        <button data-form="button" class="card__button" type="submit">
           Calcular IMC
           <img src="img/arrow.svg">
         </button>
@@ -36,7 +36,7 @@
 
   <div data-modal="wrapper" class="modal-wrapper">
     <div class="modal">
-      <h2 class="title">Seu IMC é de <span>28</span></h2>
+      <h2 class="title">Seu IMC é de <span data-modal="imc">28</span></h2>
       <button data-modal="close-button" class="modal__close-button" type="button"><img src="img/close.svg" alt="Fechar modal"></button>
     </div>
   </div>
@@ -45,6 +45,6 @@
     Digite somente números
   </div>
 
-  <script src="js/script.js"></script>
+  <script src="js/script.js" type="module"></script>
 </body>
 </html>
